# fm-rust-trader

./: Cargo.toml  README.md
resources/config/: default.json
resources/data/: ETH-USD_1D.csv  ETH-USD_1D_FULL.csv
src/: config.rs  data.rs  main.rs  model.rs
